Menu Logic worked out..

--- a/wicket6/src/main/webapp/com/mypitech/experior/wicket6/ui/panel/layout/Menu.html
+++ b/wicket6/src/main/webapp/com/mypitech/experior/wicket6/ui/panel/layout/Menu.html
@@ -10,9 +10,9 @@
                 <li>
                     <h4>Pages</h4>
                     <ul>
-                        <li><a ng-click="page.setPage('home')" href="#">Home Page</a></li>
-                        <li><a ng-click="page.setPage('hello')" href="#">Hello World!</a></li>
-                        <li><a ng-click="page.setPage('crud')" href="#">Basic CRUD Example</a></li>
+                        <li><a wicket:id="homeLink">Home Page</a></li>
+                        <li><a wicket:id="helloLink">Hello World!</a></li>
+                        <li><a wicket:id="crudLink">Basic CRUD Example</a></li>
                     </ul>
                 </li>
             </ul>
