--- a/wicket6/src/main/webapp/com/mypitech/experior/wicket6/ui/panel/layout/TopNav.html
+++ b/wicket6/src/main/webapp/com/mypitech/experior/wicket6/ui/panel/layout/TopNav.html
@@ -8,9 +8,9 @@
         <nav>
             <div class="width">
                 <ul>
-                    <li class="start"><a href="#">Home</a></li>
-                    <li class=""><a href="">Hello World</a></li>
-                    <li class="end"><a href="">CRUD</a></li>
+                    <li class="start" wicket:id="homeItem"><a wicket:id="homeLink">Home</a></li>
+                    <li class="" wicket:id="helloItem"><a wicket:id="helloLink">Hello World</a></li>
+                    <li class="end" wicket:id="crudItem"><a wicket:id="crudLink">CRUD</a></li>
                 </ul>
             </div>
         </nav>
